@@ -180,17 +180,17 @@ Tables
    | 2  | Empty cells:   |    |
    +----+----------------+----+
 
-Table with multicol:
+Table with multirow and multicol:
 
 .. only:: latex
 
-   +----+---------------------+
-   | 1  | test!               |
-   +----+---------+------+----+
-   | 2  | col     | col  | c  |
-   | y  +---------+------+----+
-   | x  | test                |
-   +----+---------------------+
+   +----+----------------+---------+
+   | 1  | test!          | c       |
+   +----+---------+------+         |
+   | 2  | col     | col  |         |
+   | y  +---------+------+----+----+
+   | x  | multi-column cell   | x  |
+   +----+---------------------+----+
 
 
 Figures
