@@ -12,6 +12,8 @@ Features added
 Bugs fixed
 ----------
 
+* LaTeX writer now generates correct markup for cells spanning multiple rows.
+
 
 Release 1.3b2 (released Dec 5, 2014)
 ====================================
